--- a/Src/Frontend/webapp/src/index.css
+++ b/Src/Frontend/webapp/src/index.css
@@ -45,6 +45,15 @@
 @import './css/pages/admin.css';
 @import './css/pages/volunteer.css';
 @import './css/pages/rounds.css';
+@import './css/pages/volunteer-orders.css';
+
+
+/* ===========================================
+   OVERRIDE FILES (MUST BE LAST)
+   These contain !important rules to override
+   inline styles from React components
+   =========================================== */
+@import './css/pages/volunteer_overrides.css';
 
 /* ===========================================
    UTILITY CLASSES
